# robomaster

./: .clang-format  CMakeLists.txt  README.md  binTest.py  record_bag.sh
IntelligentUAVChampionship-vision/: CMakeLists.txt  IntelligentUAVChampionship-vision.cpp  IntelligentUAVChampionship-vision.h  main.cpp
src/pos_ctrl/src/plan_and_control/: CMakeLists.txt
src/pos_ctrl/src/plan_and_control/config/: waypoints.yaml
src/pos_ctrl/src/plan_and_control/include/plan_and_control/: trajectory_publisher_node.h  trajectory_replan_node.h  trajectory_tracking_node.h
src/pos_ctrl/src/plan_and_control/launch/: trajectory_tracking.launch
src/pos_ctrl/src/plan_and_control/src/: trajectory_publisher_node.cpp  trajectory_replan_node.cpp  trajectory_tracking_node.cpp
src/pos_ctrl/src/pos_ctrl/include/: pos_ctrl.hpp
src/pos_ctrl/src/pos_ctrl/src/: pos_ctrl.cpp
src/pos_ctrl/src/ring_detection/: CMakeLists.txt
src/pos_ctrl/src/ring_detection/include/: ring_detection.h
src/pos_ctrl/src/ring_detection/src/: ring_detection.cpp
src/ring_detection/: package.xml
src/ring_detection/include/: ring_detection.h
src/ring_detection/src/: ring_detection.cpp  ring_detection_node.cpp
